--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd9462">  <td>17/03/22 16:14:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="myTournaments.TestValidLogin()[pri:0, instance:com.playphone.msportsUI.myTournaments@56ac3a89]">TestValidLogin</td> 
-  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/22 16:15:51</td>   <td>101188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;myTournaments.tearDown()[pri:0, instance:com.playphone.msportsUI.myTournaments@56ac3a89]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/22 16:13:58</td>   <td>-12377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;myTournaments.ti()[pri:0, instance:com.playphone.msportsUI.myTournaments@56ac3a89]">&gt;&gt;ti</td> 
-<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="60af79">  <td>17/04/10 12:10:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="myTournamentsMenu.TestValidLogin()[pri:0, instance:com.playphone.msportsUI.myTournamentsMenu@59494225]">TestValidLogin</td> 
+  <td>main@1376400422</td>   <td></td> </tr>
+<tr bgcolor="60af79">  <td>17/04/10 12:11:06</td>   <td>45529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;myTournamentsMenu.tearDown()[pri:0, instance:com.playphone.msportsUI.myTournamentsMenu@59494225]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1376400422</td>   <td></td> </tr>
+<tr bgcolor="60af79">  <td>17/04/10 12:10:11</td>   <td>-9876</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;myTournamentsMenu.ti()[pri:0, instance:com.playphone.msportsUI.myTournamentsMenu@59494225]">&gt;&gt;ti</td> 
+<td>&nbsp;</td>  <td>main@1376400422</td>   <td></td> </tr>
 </table>
