changes to testng.xml

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60af79">  <td>17/04/10 12:10:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="myTournamentsMenu.TestValidLogin()[pri:0, instance:com.playphone.msportsUI.myTournamentsMenu@59494225]">TestValidLogin</td> 
-  <td>main@1376400422</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>17/04/10 12:11:06</td>   <td>45529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;myTournamentsMenu.tearDown()[pri:0, instance:com.playphone.msportsUI.myTournamentsMenu@59494225]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1376400422</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>17/04/10 12:10:11</td>   <td>-9876</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;myTournamentsMenu.ti()[pri:0, instance:com.playphone.msportsUI.myTournamentsMenu@59494225]">&gt;&gt;ti</td> 
-<td>&nbsp;</td>  <td>main@1376400422</td>   <td></td> </tr>
+<tr bgcolor="60af79">  <td>17/04/10 12:14:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteFacebookAccount.NewAccountSignup()[pri:0, instance:com.playphone.msportsUI.DeleteFacebookAccount@5cb9f472]">NewAccountSignup</td> 
+  <td>main@1864350231</td>   <td></td> </tr>
+<tr bgcolor="83a2f9">  <td>17/04/10 12:16:04</td>   <td>92582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteGoogleAccount.NewAccountSignup()[pri:0, instance:com.playphone.msportsUI.DeleteGoogleAccount@cb644e]">NewAccountSignup</td> 
+  <td>main@1864350231</td>   <td></td> </tr>
+<tr bgcolor="c0edeb">  <td>17/04/10 12:17:25</td>   <td>172786</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteAccount.NewAccountSignup()[pri:0, instance:com.playphone.msportsUI.DeleteAccount@13805618]">NewAccountSignup</td> 
+  <td>main@1864350231</td>   <td></td> </tr>
+<tr bgcolor="60af79">  <td>17/04/10 12:15:49</td>   <td>77138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DeleteFacebookAccount.tearDown()[pri:0, instance:com.playphone.msportsUI.DeleteFacebookAccount@5cb9f472]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
+<tr bgcolor="83a2f9">  <td>17/04/10 12:17:16</td>   <td>163905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DeleteGoogleAccount.tearDown()[pri:0, instance:com.playphone.msportsUI.DeleteGoogleAccount@cb644e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
+<tr bgcolor="c0edeb">  <td>17/04/10 12:18:40</td>   <td>247669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DeleteAccount.tearDown()[pri:0, instance:com.playphone.msportsUI.DeleteAccount@13805618]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
+<tr bgcolor="60af79">  <td>17/04/10 12:14:22</td>   <td>-10375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DeleteFacebookAccount.ti()[pri:0, instance:com.playphone.msportsUI.DeleteFacebookAccount@5cb9f472]">&gt;&gt;ti</td> 
+<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
+<tr bgcolor="83a2f9">  <td>17/04/10 12:15:50</td>   <td>77940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DeleteGoogleAccount.ti()[pri:0, instance:com.playphone.msportsUI.DeleteGoogleAccount@cb644e]">&gt;&gt;ti</td> 
+<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
+<tr bgcolor="c0edeb">  <td>17/04/10 12:17:16</td>   <td>164187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DeleteAccount.ti()[pri:0, instance:com.playphone.msportsUI.DeleteAccount@13805618]">&gt;&gt;ti</td> 
+<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
 </table>
