--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60af79">  <td>17/05/07 21:42:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HttpGetterJason.PostTest()[pri:0, instance:com.playphone.msportsUI.HttpGetterJason@5f341870]">PostTest</td> 
-  <td>main@909295153</td>   <td></td> </tr>
+<tr bgcolor="60af79">  <td>17/06/01 11:00:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AllGamesMenu.TestValidLogin()[pri:0, instance:com.playphone.msportsUI.AllGamesMenu@59494225]">TestValidLogin</td> 
+  <td>main@1376400422</td>   <td></td> </tr>
+<tr bgcolor="60af79">  <td>17/06/01 11:01:12</td>   <td>60408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AllGamesMenu.tearDown()[pri:0, instance:com.playphone.msportsUI.AllGamesMenu@59494225]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1376400422</td>   <td></td> </tr>
+<tr bgcolor="60af79">  <td>17/06/01 10:59:57</td>   <td>-14977</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AllGamesMenu.ti()[pri:0, instance:com.playphone.msportsUI.AllGamesMenu@59494225]">&gt;&gt;ti</td> 
+<td>&nbsp;</td>  <td>main@1376400422</td>   <td></td> </tr>
 </table>
