--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60af79">  <td>17/06/30 13:09:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ChangePassword.ti()[pri:0, instance:com.playphone.msportsUI.ChangePassword@3f49dace]">&gt;&gt;ti</td> 
+<tr bgcolor="60af79">  <td>17/07/21 13:47:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountLoginValidUsernamePassword.ti()[pri:0, instance:com.playphone.msportsUI.AccountLoginValidUsernamePassword@3f49dace]">&gt;&gt;ti</td> 
 <td>&nbsp;</td>  <td>main@329645619</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>17/06/30 13:10:10</td>   <td>11868</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChangePassword.NewAccountSignup()[pri:0, instance:com.playphone.msportsUI.ChangePassword@3f49dace]">NewAccountSignup</td> 
+<tr bgcolor="60af79">  <td>17/07/21 13:48:04</td>   <td>11315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountLoginValidUsernamePassword.TestValidLogin()[pri:0, instance:com.playphone.msportsUI.AccountLoginValidUsernamePassword@3f49dace]">TestValidLogin</td> 
   <td>main@329645619</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>17/06/30 13:12:51</td>   <td>173230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ChangePassword.tearDown()[pri:0, instance:com.playphone.msportsUI.ChangePassword@3f49dace]">&lt;&lt;tearDown</td> 
+<tr bgcolor="60af79">  <td>17/07/21 13:49:20</td>   <td>87914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountLoginValidUsernamePassword.tearDown()[pri:0, instance:com.playphone.msportsUI.AccountLoginValidUsernamePassword@3f49dace]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@329645619</td>   <td></td> </tr>
 </table>
