--- a/test-output/index.html
+++ b/test-output/index.html
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.playphone.msportsUI.SignupPrivacyPolicy" hash-for-method="PrivacyPolicy">PrivacyPolicy</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.playphone.msportsUI.playTournamentMsportsClose" hash-for-method="ClickPlayNowButton0">ClickPlayNowButton0</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -119,14 +119,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.playphone.msportsUI.SignupPrivacyPolicy</span>
+              <span class="class-name">com.playphone.msportsUI.playTournamentMsportsClose</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="PrivacyPolicy">
-                  </a> <!-- PrivacyPolicy -->
-                  <span class="method-name">PrivacyPolicy</span>
+                  <a name="ClickPlayNowButton0">
+                  </a> <!-- ClickPlayNowButton0 -->
+                  <span class="method-name">ClickPlayNowButton0</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -134,7 +134,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/r5/w12xjt311ndf0vvdz9v5tzh00000gp/T/testng-eclipse-1483134804/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/r5/w12xjt311ndf0vvdz9v5tzh00000gp/T/testng-eclipse--1679862725/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -143,7 +143,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.playphone.msportsUI.SignupPrivacyPolicy&quot;/&gt;
+      &lt;class name=&quot;com.playphone.msportsUI.playTournamentMsportsClose&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -185,14 +185,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'PrivacyPolicy')
-data.setCell(0, 2, 'com.playphone.msportsUI.SignupPrivacyPolicy')
-data.setCell(0, 3, 42472);
+data.setCell(0, 1, 'ClickPlayNowButton0')
+data.setCell(0, 2, 'com.playphone.msportsUI.playTournamentMsportsClose')
+data.setCell(0, 3, 83480);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 42 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -218,18 +218,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.playphone.msportsUI.SignupPrivacyPolicy</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.playphone.msportsUI.playTournamentMsportsClose</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">ti</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">PrivacyPolicy</span>
-                <span class="method-start">11500 ms</span>
+                <span class="method-name">ClickPlayNowButton0</span>
+                <span class="method-start">13293 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">53981 ms</span>
+                <span class="method-start">96776 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
