--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60af79">  <td>17/07/25 16:24:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;playTournamentMsportsClose.ti()[pri:0, instance:com.playphone.msportsUI.playTournamentMsportsClose@59494225]">&gt;&gt;ti</td> 
-<td>&nbsp;</td>  <td>main@1376400422</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>17/07/25 16:25:07</td>   <td>13289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="playTournamentMsportsClose.ClickPlayNowButton0()[pri:0, instance:com.playphone.msportsUI.playTournamentMsportsClose@59494225]">ClickPlayNowButton0</td> 
-  <td>main@1376400422</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>17/07/25 16:26:31</td>   <td>96772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;playTournamentMsportsClose.tearDown()[pri:0, instance:com.playphone.msportsUI.playTournamentMsportsClose@59494225]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1376400422</td>   <td></td> </tr>
+<tr bgcolor="60af79">  <td>17/07/25 16:43:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MenuDrawerInviteFriends.ti()[pri:0, instance:com.playphone.msportsUI.MenuDrawerInviteFriends@3f49dace]">&gt;&gt;ti</td> 
+<td>&nbsp;</td>  <td>main@329645619</td>   <td></td> </tr>
+<tr bgcolor="60af79">  <td>17/07/25 16:44:05</td>   <td>19180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MenuDrawerInviteFriends.TestValidLogin()[pri:0, instance:com.playphone.msportsUI.MenuDrawerInviteFriends@3f49dace]">TestValidLogin</td> 
+  <td>main@329645619</td>   <td></td> </tr>
+<tr bgcolor="60af79">  <td>17/07/25 16:46:00</td>   <td>133766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MenuDrawerInviteFriends.tearDown()[pri:0, instance:com.playphone.msportsUI.MenuDrawerInviteFriends@3f49dace]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@329645619</td>   <td></td> </tr>
 </table>
